--- a/inide.html
+++ b/inide.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>beathorst - Page</title>
+    <title>Title</title>
 </head>
 <body>
-    <h1>beathorst - Page</h1>
+
 </body>
 </html>
